new push touched all pages

--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
                         <div class="topbar-right">
                             <ul>
                                 <li><a href="apply.html">Apply</a></li>
-                                <li><a href="register.html">Students</a></li>
-                                <li><a href="register.html">Staff</a></li>
+                                <li><a href="login.html">Students</a></li>
+                                <li><a href="login.html">Staff</a></li>
                             </ul>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="blog-list-sidebar.html">Blog</a></li>
+                                <li><a href="blogs.html">Blog</a></li>
                                 <li><a href="faq.html">FAQ's</a></li>
                                 <li><a href="event.html">Event</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
@@ -462,7 +462,7 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a href="faq.html">FAQs</a></li>
-                                            <li><a href="contact-1.html">Contact</a></li>
+                                            <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -470,7 +470,7 @@
                                     <div class="widget footer_widget">
                                         <h5 class="footer-title">Get In Touch</h5>
                                         <ul>
-                                            <li><a href="blog-classic-grid.html">Blog</a></li>
+                                            <li><a href="blogs.html">Blog</a></li>
 
                                             <li><a href="event.html">Event</a></li>
                                         </ul>
