--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
     <meta name="description" content="Redeemed Christian Bible College College Portal" />
 
     <!-- OG -->
-    <meta property="og:title" content="Redeemed Christian Bible College College Portal />
-    <meta property=" og:description " content=" Redeemed Christian Bible College College Portal />
+    <meta property="og:title" content="Redeemed Christian Bible College College Portal" />
+    <meta property=" og:description " content=" Redeemed Christian Bible College College Portal" />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no" />
 
@@ -23,28 +23,23 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
 
     <!-- PAGE TITLE HERE ============================================= -->
-    <title>Redeemed Christian Bible College College Portaltitle>
+    <title>Redeemed Christian Bible College College Portal</title>
 
-        <!-- MOBILE SPECIFIC ============================================= -->
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- MOBILE SPECIFIC ============================================= -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <!--[if lt IE 9]>
-      <script src="assets/js/html5shiv.min.js"></script>
-      <script src="assets/js/respond.min.js"></script>
-    <![endif]-->
+    <!-- All PLUGINS CSS ============================================= -->
+    <link rel="stylesheet" type="text/css" href="assets/css/assets.css" />
 
-        <!-- All PLUGINS CSS ============================================= -->
-        <link rel="stylesheet" type="text/css" href="assets/css/assets.css" />
+    <!-- TYPOGRAPHY ============================================= -->
+    <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
 
-        <!-- TYPOGRAPHY ============================================= -->
-        <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
+    <!-- SHORTCODES ============================================= -->
+    <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
 
-        <!-- SHORTCODES ============================================= -->
-        <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
-
-        <!-- STYLESHEETS ============================================= -->
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-        <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
+    <!-- STYLESHEETS ============================================= -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
 </head>
 
 <body id="bg">
@@ -66,8 +61,8 @@
                         <div class="topbar-right">
                             <ul>
                                 <li><a href="apply.html">Apply</a></li>
-                                <li><a href="register.html">Students</a></li>
-                                <li><a href="register.html">Staff</a></li>
+                                <li><a href="login.html">Students</a></li>
+                                <li><a href="login.html">Staff</a></li>
                             </ul>
                         </div>
                     </div>
@@ -142,7 +137,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="blog-list-sidebar.html">Blog</a></li>
+                                <li><a href="blogs.html">Blog</a></li>
                                 <li><a href="faq.html">FAQ's</a></li>
                                 <li><a href="event.html">Event</a></li>
                                 <li class="active"><a href="contact.html">Contact Us</a></li>
@@ -165,7 +160,7 @@
             <div class="page-banner ovbl-dark" style="background-image: url(assets/images/banner/banner3.jpg)">
                 <div class="container">
                     <div class="page-banner-entry">
-                        <h1 class="text-white">Contact Us 1</h1>
+                        <h1 class="text-white">Contact Us</h1>
                     </div>
                 </div>
             </div>
@@ -174,7 +169,7 @@
                 <div class="container">
                     <ul class="list-inline">
                         <li><a href="#">Home</a></li>
-                        <li>Contact Us 1</li>
+                        <li>Contact Us</li>
                     </ul>
                 </div>
             </div>
@@ -195,8 +190,8 @@
                                 <div class="widget widget_getintuch">
                                     <ul>
                                         <li>
-                                            <i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL
-                                            309382 New York
+                                            <i class="ti-location-pin"></i>Lorem ipsum dolor sit amet consectetur
+                                            adipisicing elit. Sunt rem, veritati
                                         </li>
                                         <li>
                                             <i class="ti-mobile"></i>08030789185
@@ -313,14 +308,7 @@
                                 <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
                                         width="30%" /></a>
                             </div>
-                            <!-- <div class="pt-social-link">
-							<ul class="list-inline m-a0">
-								<li><a href="#" class="btn-link"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" class="btn-link"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="btn-link"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" class="btn-link"><i class="fa fa-google-plus"></i></a></li>
-							</ul>
-						</div> -->
+
                             <div class="pt-btn-join">
                                 <a href="#" class="btn">Join Now</a>
                             </div>
@@ -357,7 +345,7 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a href="faq.html">FAQs</a></li>
-                                            <li><a href="contact-1.html">Contact</a></li>
+                                            <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -365,7 +353,7 @@
                                     <div class="widget footer_widget">
                                         <h5 class="footer-title">Get In Touch</h5>
                                         <ul>
-                                            <li><a href="blog-classic-grid.html">Blog</a></li>
+                                            <li><a href="blogs.html">Blog</a></li>
 
                                             <li><a href="event.html">Event</a></li>
                                         </ul>
@@ -429,7 +417,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                             © Copyright 2023. All Rights Reserved. |
-                            <a target="_blank" href="https://www.templateshub.net">
+                            <a target="_blank" href="https://www.codesprosoft.com">
                                 By CodesPro Solutions</a>
                         </div>
                     </div>
