--- a/blog-classic-grid.html
+++ b/blog-classic-grid.html
@@ -65,8 +65,8 @@
                         <div class="topbar-right">
                             <ul>
                                 <li><a href="apply.html">Apply</a></li>
-                                <li><a href="register.html">Students</a></li>
-                                <li><a href="register.html">Staff</a></li>
+                                <li><a href="login.html">Students</a></li>
+                                <li><a href="login.html">Staff</a></li>
                             </ul>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                                         <li>
                                             <a href="javascript:;">Contact Us<i class="fa fa-angle-right"></i></a>
                                             <ul class="sub-menu">
-                                                <li><a href="contact-1.html">Contact Us 1</a></li>
+                                                <li><a href="contact.html">Contact Us 1</a></li>
                                                 <li><a href="contact-2.html">Contact Us 2</a></li>
                                             </ul>
                                         </li>
@@ -193,12 +193,12 @@
                                 <li>
                                     <a href="javascript:;">Blog <i class="fa fa-chevron-down"></i></a>
                                     <ul class="sub-menu">
-                                        <li><a href="blog-classic-grid.html">Blog Classic</a></li>
+                                        <li><a href="blogs.html">Blog Classic</a></li>
                                         <li>
                                             <a href="blog-classic-sidebar.html">Blog Classic Sidebar</a>
                                         </li>
                                         <li>
-                                            <a href="blog-list-sidebar.html">Blog List Sidebar</a>
+                                            <a href="blogs.html">Blog List Sidebar</a>
                                         </li>
                                         <li>
                                             <a href="blog-standard-sidebar.html">Blog Standard Sidebar</a>
@@ -537,7 +537,7 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a href="faq.html">FAQs</a></li>
-                                            <li><a href="contact-1.html">Contact</a></li>
+                                            <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -545,7 +545,7 @@
                                     <div class="widget footer_widget">
                                         <h5 class="footer-title">Get In Touch</h5>
                                         <ul>
-                                            <li><a href="blog-classic-grid.html">Blog</a></li>
+                                            <li><a href="blogs.html">Blog</a></li>
 
                                             <li><a href="event.html">Event</a></li>
                                         </ul>
