--- a/blog-details.html
+++ b/blog-details.html
@@ -58,7 +58,7 @@
                     <div class="row d-flex justify-content-between">
                         <div class="topbar-left">
                             <ul>
-                                <li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
+                                <li><a href="faq.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
                                 <li><a href="javascript:;"><i class="fa fa-envelope-o"></i>enquiry@rcbc.edu.ng</a></li>
                                 <li><a href="javascript:;"><i class="fa fa-phone"></i>08030789185</a></li>
                             </ul>
