--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="topbar-left">
                             <ul>
                                 <li>
-                                    <a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a>
+                                    <a href="faq.html"><i class="fa fa-question-circle"></i>Ask a Question</a>
                                 </li>
                                 <li>
                                     <a href="javascript:;"><i class="fa fa-envelope-o"></i>enquiry@rcbc.edu.ng</a>
@@ -1049,7 +1049,7 @@
                                         <ul>
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about-1.html">About</a></li>
-                                            <li><a href="faq-1.html">FAQs</a></li>
+                                            <li><a href="faq.html">FAQs</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
