--- a/membership.html
+++ b/membership.html
@@ -60,7 +60,7 @@
                     <div class="row d-flex justify-content-between">
                         <div class="topbar-left">
                             <ul>
-                                <li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
+                                <li><a href="faq.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
                                 <li><a href="javascript:;"><i class="fa fa-envelope-o"></i>Support@website.com</a></li>
                             </ul>
                         </div>
@@ -145,7 +145,7 @@
                                         </li>
                                         <li><a href="javascript:;">FAQ's<i class="fa fa-angle-right"></i></a>
                                             <ul class="sub-menu">
-                                                <li><a href="faq-1.html">FAQ's 1</a></li>
+                                                <li><a href="faq.html">FAQ's 1</a></li>
                                                 <li><a href="faq-2.html">FAQ's 2</a></li>
                                             </ul>
                                         </li>
@@ -566,7 +566,7 @@
                                         <ul>
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="about-1.html">About</a></li>
-                                            <li><a href="faq-1.html">FAQs</a></li>
+                                            <li><a href="faq.html">FAQs</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
