fix schools image to custom image

--- a/index.html
+++ b/index.html
@@ -153,8 +153,20 @@
                                                 <li><a href="courses.html">Courses</a></li>
                                             </ul>
                                         </li>
-                                        <li class="add-menu-right">
-                                            <img src="assets/images/adv/adv.jpg" alt="" />
+                                        <li class="add-menu-right"
+                                            style="position:relative; width: 180px; height: 200px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+                                            <img src="assets/images/banner/banner2.jpg" alt=""
+                                                style="width:300px !important; max-width:150% !important;" />
+                                            <div class="overlay"
+                                                style="position: absolute; top:0; left:0; width: 100%; height:100%; background: rgba(15, 1, 94, 0.462); display: flex !important; align-items: center !important; justify-content: center !important; gap: 8px !important; flex-direction: column;">
+                                                <h5 style="color: #fff !important;">Online courses
+                                                </h5>
+
+                                                <a href="apply.html" class="btn"
+                                                    style="padding: 10px 30px; border: 2px solid #fff !important; color: #fff !important;">
+                                                    Join now</a>
+
+                                            </div>
                                         </li>
                                     </ul>
                                 </li>
