fix schools image to custom imagl

--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,9 @@
                         </div>
                         <div class="topbar-right">
                             <ul>
-                                <li><a href="apply.html">Apply</a></li>
+                                <li><a href="applicant-login.html">Applicant area</a></li>
                                 <li><a href="login.html">Students</a></li>
-                                <li><a href="login.html">Staff</a></li>
+                                <li><a href="staff-login.html">Staff</a></li>
                             </ul>
                         </div>
                     </div>
