--- a/about.html
+++ b/about.html
@@ -70,9 +70,9 @@
                         </div>
                         <div class="topbar-right">
                             <ul>
-                                <li><a href="apply.html">Apply</a></li>
+                                <li><a href="applicant-login.html">Applicant area</a></li>
                                 <li><a href="login.html">Students</a></li>
-                                <li><a href="login.html">Staff</a></li>
+                                <li><a href="staff-login.html">Staff</a></li>
                             </ul>
                         </div>
                     </div>
@@ -384,7 +384,7 @@
                                     </div>
                                     <div class="testimonial-info">
                                         <h5 class="name">Adedamola bola</h5>
-                                        <p>Cisco</p>
+                                        <p>Diploma</p>
                                     </div>
                                     <div class="testimonial-content">
                                         <p>
@@ -424,11 +424,16 @@
         <footer>
             <div class="footer-top">
                 <div class="pt-exebar">
-                    <div class="container">
+                    <div class="container" style="background: #ffffff9c !important; backdrop-filter: blur(100px);">
                         <div class="d-flex align-items-stretch">
                             <div class="pt-logo mr-auto">
-                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
-                                        width="30%" /></a>
+                                <div>
+                                    <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" width="40%" style="
+                                        filter: drop-shadow(2px, 3px, 4px #ccc);
+                                        padding: 10px;
+                                        border-radius: 10px;" /></a>
+                                </div>
+
                             </div>
                             <!-- <div class="pt-social-link">
 							<ul class="list-inline m-a0">
@@ -528,12 +533,13 @@
                                                 src="assets/images/gallery/pic6.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic7.jpg" alt="" /></a>
+                                        <a rel="noopener" href="assets/images/gallery/pic7.jpg" class="magnific-anchor"
+                                            title="gallery"><img src="assets/images/gallery/pic7.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic8.jpg" alt="" /></a>
+                                        <a rel="noopener" href="assets/images/gallery/pic8.jpg"
+                                            class="magnific-anchor"><img src="assets/images/gallery/pic8.jpg"
+                                                alt="" /></a>
                                     </li>
                                 </ul>
                             </div>
@@ -546,7 +552,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                             © Copyright 2023. All Rights Reserved. |
-                            <a target="_blank" href="https://www.templateshub.net">
+                            <a rel="noopener" target="_blank" href="https://www.templateshub.net">
                                 By CodesPro Solutions</a>
                         </div>
                     </div>
@@ -554,7 +560,7 @@
             </div>
         </footer>
         <!-- Footer END ==== -->
-        <button class="back-to-top fa fa-chevron-up"></button>
+        <buttonb type="button" class="back-to-top fa fa-chevron-up"></button>
     </div>
     <!-- External JavaScripts -->
     <script src="assets/js/jquery.min.js"></script>
