--- a/courses.html
+++ b/courses.html
@@ -71,9 +71,9 @@
                         </div>
                         <div class="topbar-right">
                             <ul>
-                                <li><a href="apply.html">Apply</a></li>
+                                <li><a href="applicant-login.html">Applicant area</a></li>
                                 <li><a href="login.html">Students</a></li>
-                                <li><a href="login.html">Staff</a></li>
+                                <li><a href="staff-login.html">Staff</a></li>
                             </ul>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
-                                                    <a href="courses-details.html">IT Essentials (cisco prog)</a>
+                                                    <a href="courses-details.html">IT Essentials (Diploma prog)</a>
                                                 </h5>
                                                 <span>School of Computer</span>
                                             </div>
@@ -458,7 +458,7 @@
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
-                                                    <a href="courses-details.html">IT Essentials (cisco programme)</a>
+                                                    <a href="courses-details.html">IT Essentials (Diploma programme)</a>
                                                 </h5>
                                                 <span>School of Computer</span>
                                             </div>
@@ -489,7 +489,7 @@
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
-                                                    <a href="courses-details.html">IT Essentials (cisco programme)</a>
+                                                    <a href="courses-details.html">IT Essentials (Diploma programme)</a>
                                                 </h5>
                                                 <span>School of Computer</span>
                                             </div>
@@ -540,11 +540,16 @@
         <footer>
             <div class="footer-top">
                 <div class="pt-exebar">
-                    <div class="container">
+                    <div class="container" style="background: #ffffff9c !important; backdrop-filter: blur(100px);">
                         <div class="d-flex align-items-stretch">
                             <div class="pt-logo mr-auto">
-                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
-                                        width="30%" /></a>
+                                <div>
+                                    <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" width="40%" style="
+                                        filter: drop-shadow(2px, 3px, 4px #ccc);
+                                        padding: 10px;
+                                        border-radius: 10px;" /></a>
+                                </div>
+
                             </div>
                             <!-- <div class="pt-social-link">
 							<ul class="list-inline m-a0">
