--- a/profile.html
+++ b/profile.html
@@ -1015,11 +1015,16 @@
         <footer>
             <div class="footer-top">
                 <div class="pt-exebar">
-                    <div class="container">
+                    <div class="container" style="background: #ffffff9c !important; backdrop-filter: blur(100px);">
                         <div class="d-flex align-items-stretch">
                             <div class="pt-logo mr-auto">
-                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
-                                        width="30%" /></a>
+                                <div>
+                                    <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" width="40%" style="
+                                        filter: drop-shadow(2px, 3px, 4px #ccc);
+                                        padding: 10px;
+                                        border-radius: 10px;" /></a>
+                                </div>
+
                             </div>
                             <!-- <div class="pt-social-link">
 							<ul class="list-inline m-a0">
