--- a/staff-login.html
+++ b/staff-login.html
@@ -71,7 +71,7 @@
               <div class="col-lg-12">
                 <div class="form-group">
                   <div class="input-group">
-                    <label>Matric Number</label>
+                    <label>Employee Id</label>
                     <input name="dzName" type="text" required="" class="form-control" style="padding: 0 10px" />
                   </div>
                 </div>
@@ -90,7 +90,7 @@
                     <input type="checkbox" class="custom-control-input" id="customControlAutosizing" />
                     <label class="custom-control-label" for="customControlAutosizing">Remember me</label>
                   </div>
-                  <a href="forget-password.html" class="ml-auto">Forgot Password?</a>
+                  <!-- <a href="forget-password.html" class="ml-auto">Forgot Password?</a> -->
                 </div>
               </div>
               <div class="col-lg-12 m-b30">
