--- a/verify.html
+++ b/verify.html
@@ -60,23 +60,14 @@
             <div class="account-form-inner">
                 <div class="account-container">
                     <div class="heading-bx left">
-                        <h2 class="title-head">Sign Up <span>Now</span></h2>
-                        <p>Login Your Account <a href="login.html">Click here</a></p>
+                        <h2 class="title-head">Recived Verification code <span> Verify Now</span></h2>
                     </div>
                     <form class="contact-bx">
                         <div class="row placeani">
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <label>Your Name</label>
-                                        <input name="dzName" type="text" required="" class="form-control" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <label>Your Email Address</label>
+                                        <label>Verification Code</label>
                                         <input name="dzName" type="email" required="" class="form-control" />
                                     </div>
                                 </div>
@@ -84,19 +75,71 @@
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <label>Your Password</label>
-                                        <input name="dzEmail" type="password" class="form-control" required="" />
+                                        <label>Registered Email</label>
+                                        <input name="email" type="email" required="" class="form-control" />
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col-lg-12 m-b30">
                                 <button name="submit" type="submit" value="Submit" class="btn button-md">
-                                    Sign Up
+                                    Verify Application
                                 </button>
                             </div>
 
+
+
+
+
                         </div>
                     </form>
+                    <div style="width: 100%; text-align: center; padding: 20px;">Or</div>
+
+                    <div class="heading-bx left">
+                        <h2 class="title-head">Verification code Not Recived <span> Retry Now</span></h2>
+                    </div>
+                    <form class="contact-bx">
+                        <div class="row placeani">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <label>Registered Phone Number</label>
+                                        <input name="dzName" type="email" required="" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <label>Registered Email</label>
+                                        <input name="email" type="email" required="" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12 m-b30">
+                                <button name="submit" type="submit" value="Submit" class="btn button-md">
+                                    Resend Verification code
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <p style="font-size: 13px !important;"> <span>Note: </span><br /> After registration, a link is sent
+                        to applicants
+                        email
+                        address with instructions for
+                        verification. A verification code is also sent to applicants mobile number. This
+                        page
+                        allows
+                        applicants to verify their application by using the verification code received
+                        through
+                        SMS
+                        or from our support team. Verification is allowed through any of the two stated.
+                        Applicants
+                        who did not receive either or both may request for it to be resent.
+                    </p>
+
                 </div>
             </div>
         </div>
