--- a/blog-standard-sidebar.html
+++ b/blog-standard-sidebar.html
@@ -122,7 +122,7 @@
                         <!-- Navigation Menu ==== -->
                         <div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
                             <div class="menu-logo">
-                                <a href="index.html"><img src="assets/images/logo.png" alt="" /></a>
+                                <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" /></a>
                             </div>
                             <ul class="nav navbar-nav">
                                 <li class="active">
